--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@nextui-org/button": "2.0.9",
+    "@nextui-org/card": "^2.0.14",
     "@nextui-org/code": "2.0.7",
+    "@nextui-org/image": "^2.0.14",
     "@nextui-org/input": "2.0.10",
     "@nextui-org/kbd": "2.0.8",
     "@nextui-org/link": "2.0.9",
     "@nextui-org/navbar": "2.0.9",
+    "@nextui-org/react": "^2.1.5",
     "@nextui-org/snippet": "2.0.10",
     "@nextui-org/switch": "2.0.9",
     "@nextui-org/system": "2.0.5",
     "@nextui-org/theme": "2.0.4",
-    "@react-aria/visually-hidden": "^3.8.3",
     "@react-aria/ssr": "^3.7.1",
+    "@react-aria/visually-hidden": "^3.8.3",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
