--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
     "lint": "next lint"
   },
@@ -27,6 +28,7 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "eslint": "8.41.0",
@@ -34,6 +36,7 @@
     "framer-motion": "^10.15.1",
     "intl-messageformat": "^10.1.0",
     "next": "13.4.13",
+    "next-sitemap": "^4.2.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
