--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
-    "production": "npm run build & npm run postbuild",
+    "production": "pnpm run build & pnpm run postbuild",
     "start": "next start",
     "lint": "next lint"
   },
